# swo-adobe-vipm-docs-mcp

./: .gitattributes  .gitignore  .mcpbignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  manifest.json  parse-errors.txt  pyproject.toml  requirements.txt  server.py
.github/: CODEOWNERS
.github/workflows/: auto-version-bump.yml  ci.yml  codeql.yml  link-check.yml  publish-mcpb.yml  publish-pypi.yml  refresh-index.yml
examples/: README.md  find_error_code.py  list_tools.py  recent_releases.py
scripts/: smoke_test.py
src/vipmp_docs_mcp/: __init__.py  autositemap.py  cache.py  codegen.py  extractors.py  fetcher.py  html_cleaner.py  index.py  logging_config.py  prompts.py  releases.py  remote_index.py  search.py  server.py  sitemap.py  supplement.py  tips.py  validator.py
src/vipmp_docs_mcp/content/: tips.md  training-supplement.md
src/vipmp_docs_mcp/data/: index.json  sitemap.json
tests/: conftest.py  test_async_fetcher.py  test_autositemap.py  test_cache.py  test_codegen.py  test_extractors.py  test_fetcher.py  test_index.py  test_prompts.py  test_releases.py  test_remote_index.py  test_search.py  test_sitemap.py  test_supplement.py  test_tips.py  test_validations.py  test_validator.py
