[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vipmp-docs-mcp"
version = "0.6.1"
description = "MCP server exposing Adobe VIP Marketplace Partner API documentation as searchable tools"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [
    { name = "SoftwareOne AG" },
]
keywords = ["mcp", "claude", "adobe", "vipmp", "documentation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "tenacity>=9.0.0",
    # Java-compatible regex engine. Adobe's published validation regexes use
    # Unicode property classes (\p{L}, \p{N}) that Python's stdlib `re`
    # doesn't fully support. Falls back gracefully if missing.
    "regex>=2024.4.16",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-httpx>=0.35.0",
    "ruff>=0.15.0,<0.16",
]

[project.scripts]
vipmp-docs-mcp = "vipmp_docs_mcp.server:main"

[project.urls]
Homepage = "https://github.com/softwareone-platform/swo-adobe-vipm-docs-mcp"
Repository = "https://github.com/softwareone-platform/swo-adobe-vipm-docs-mcp"
Issues = "https://github.com/softwareone-platform/swo-adobe-vipm-docs-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/vipmp_docs_mcp"]
# data/index.json ships with the wheel automatically because it's under
# the package directory — no force-include needed (and adding one
# triggers a "duplicate file" warning at build time).

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = "--strict-markers --strict-config"

[tool.coverage.run]
source = ["src/vipmp_docs_mcp"]
branch = true
# Exclude the top-level server tool definitions — they're exercised by the
# smoke test which doesn't run in unit-test CI. Keep the structured modules
# under measurement.
omit = [
    "src/vipmp_docs_mcp/__init__.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "RUF"]
ignore = ["E501"]  # line-too-long — handled by formatter
